# aoc-2022

./: Cargo.toml
.github/workflows/: ci.yml
